Fix: use overrides to resolve ajv version conflict

--- a/package.json
+++ b/package.json
@@ -37,5 +37,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0"
+  },
+  "overrides": {
+  "ajv": "8.17.1",
+  "ajv-keywords": {
+    "ajv": "8.17.1"
   }
+}
+
 }
