git action updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,12 @@ jobs:
         steps:
             - name: Checkout Code
               uses: actions/checkout@v3
-
             - name: Set up Node js
               uses: actions/setup-node@v3
               with: 
                 node-version: '18'
-
+            - name: Check lockfile sync
+              run: npm install --package-lock-only --dry-run
             - name: Install Dependencies
               run: npm ci
 
