--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,26 @@
 name: CI/CD Pipeline
 
 on: 
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-    build-test:
-        runs-on: ubuntu-latest
+  build-test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v3
-            - name: Set up Node js
-              uses: actions/setup-node@v3
-              with: 
-                node-version: '18'
-            - name: Check lockfile sync
-              run: npm install --package-lock-only --dry-run
-            - name: Install Dependencies
-              run: npm ci
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-            - name: Run Tests
-              run: npm test -- --watchAll=false
+      - name: Set up Node js
+        uses: actions/setup-node@v3
+        with: 
+          node-version: '18'
+
+      - name: Install Dependencies
+        run: npm ci --no-audit --prefer-offline
+
+      - name: Run Tests
+        run: npm test -- --watchAll=false
