--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0"
+    "@testing-library/react": "^16.3.0",
+    "typescript": "^4.9.5"
   },
   "overrides": {
-  "ajv": "8.17.1",
-  "ajv-keywords": {
-    "ajv": "8.17.1"
+    "ajv": "8.17.1",
+    "ajv-keywords": {
+      "ajv": "8.17.1"
+    }
   }
-}
-
 }
